@@ -38,7 +38,7 @@ def antenna_pairs(antenna_ids):
     return [(antenna_ids[i], antenna_ids[j]) for i in range(len(antenna_ids)) for j in range(i + 1, len(antenna_ids))]
 
 @pytest.fixture
-def correlations_array(antenna_pairs):
+def pol_correlations_array(antenna_pairs):
     real = NP.arange(len(antenna_pairs)*2*2)
     imag = real[::-1]
     return (real+1j*imag).reshape(-1,2,2)
@@ -52,7 +52,7 @@ def polaxes():
     return (-2,-1)
 
 @pytest.fixture
-def corrs_list1():
+def pol_corrs_list1():
     return [NP.array([[1+2j, 3+4j], 
                       [5+6j, 7+8j]]), 
             NP.array([[9+10j, 11+12j], 
@@ -61,7 +61,7 @@ def corrs_list1():
                       [21+22j, 23+24j]])]
 
 @pytest.fixture
-def corrs_list2():
+def pol_corrs_list2():
     return [NP.array([[25+26j, 27+28j], 
                       [29+30j, 31+32j]]), 
             NP.array([[33+34j, 35+36j], 
@@ -70,7 +70,7 @@ def corrs_list2():
                       [45+46j, 47+48j]])]
 
 @pytest.fixture
-def corrs_list3():
+def pol_corrs_list3():
     return [NP.array([[49+50j, 51+52j], 
                       [53+54j, 55+56j]]), 
             NP.array([[57+58j, 59+60j], 
@@ -79,27 +79,27 @@ def corrs_list3():
                       [69+70j, 71+72j]])]
 
 @pytest.fixture
-def advariant1(corrs_list1):
-    return (corrs_list1[0]@NP.linalg.inv(corrs_list1[1].T.conj())@corrs_list1[2])[NP.newaxis,...]
+def pol_advariant1(pol_corrs_list1):
+    return (pol_corrs_list1[0]@NP.linalg.inv(pol_corrs_list1[1].T.conj())@pol_corrs_list1[2])[NP.newaxis,...]
 
 @pytest.fixture
-def advariant2(corrs_list2):
-    return (corrs_list2[0]@NP.linalg.inv(corrs_list2[1].T.conj())@corrs_list2[2])[NP.newaxis,...]
+def pol_advariant2(pol_corrs_list2):
+    return (pol_corrs_list2[0]@NP.linalg.inv(pol_corrs_list2[1].T.conj())@pol_corrs_list2[2])[NP.newaxis,...]
 
 @pytest.fixture
-def advariant3(corrs_list3):
-    return (corrs_list3[0]@NP.linalg.inv(corrs_list3[1].T.conj())@corrs_list3[2])[NP.newaxis,...]
+def pol_advariant3(pol_corrs_list3):
+    return (pol_corrs_list3[0]@NP.linalg.inv(pol_corrs_list3[1].T.conj())@pol_corrs_list3[2])[NP.newaxis,...]
 
 @pytest.fixture
-def corrs_lol(corrs_list1, corrs_list2, corrs_list3):
-    return [corrs_list1, corrs_list2, corrs_list3]
+def pol_corrs_lol(pol_corrs_list1, pol_corrs_list2, pol_corrs_list3):
+    return [pol_corrs_list1, pol_corrs_list2, pol_corrs_list3]
 
 @pytest.fixture
-def advariants_on_list(advariant1, advariant2, advariant3):
-    return NP.concatenate([advariant1, advariant2, advariant3], axis=0)[NP.newaxis,...]
+def pol_advariants_on_list(pol_advariant1, pol_advariant2, pol_advariant3):
+    return NP.concatenate([pol_advariant1, pol_advariant2, pol_advariant3], axis=0)[NP.newaxis,...]
 
 @pytest.fixture
-def vectors_from_advariants():
+def vectors_from_pol_advariants():
     return NP.asarray([[[ -8.5 +5.j,  -8.5 +5.j, 3.5+3.5j, 4.5-4.5j],
                         [-44.5+41.j, -44.5+41.j, 3.5+3.5j, 4.5-4.5j],
                         [-80.5+77.j, -80.5+77.j, 3.5+3.5j, 4.5-4.5j]]])
@@ -120,7 +120,7 @@ def minkoski_dots_scaling_factor_removed(complete_minkowski_dots):
     return complete_minkowski_dots / NP.sqrt(NP.sum(complete_minkowski_dots**2, axis=-1, keepdims=True))
 
 @pytest.fixture
-def complex_gains():
+def pol_complex_gains():
     nants = 10
     mean_gain_scale = 3.0
     randseed = None
