@@ -1,3 +1,9 @@
+From 4426115 (scalar):
+=====================
+
+(*) Update tests/conftest.py for polarimetric case
+(*) Update tests/test_vectorInvariants.py for polarimetric case
+
 From 5b40c36 (scalar):
 =====================
 
